--- a/osa2/maat/package.json
+++ b/osa2/maat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puhelinluettelo",
+  "name": "maat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
-  },
-  "devDependencies": {
-    "json-server": "^0.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
