--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "test": "jest --verbose",
+    "lint": "eslint ."
   },
   "author": "Joni Hiltunen",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^5.16.0",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.10"
   },
   "dependencies": {
@@ -20,5 +22,8 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
