--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -19,12 +19,15 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.5.0"
+    "mongoose": "^5.5.0",
+    "mongoose-unique-validator": "^2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
