--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -26,6 +26,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "5.12.0"
+    "eslint": "5.12.0",
+    "jest-dom": "^3.1.3",
+    "react-testing-library": "^6.1.2"
   }
+ 
 }
